fixed blog cards overflowing navbar

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -106,6 +106,7 @@
   @include flexCenter($j-content: space-between);
   position: fixed;
   width: 100%;
+  z-index: 2;
   grid-template-rows: auto auto;
   grid-template-areas: "brand"
   "nav";
